crates/gh-report/src/domain/snapshots/gh_report__domain__evidence__tests__snapshot_assessment_metadata.snap
---
source: crates/gh-report/src/domain/evidence.rs
expression: metadata
---
{
  "date": "2026-04-09",
  "organization": "TestOrg",
  "schema_version": "24.0",
  "run_timestamp": "2026-04-09T12:00:00+00:00",
  "run_id": "test-run-id",
  "token_tier": "full",
  "token_scopes": "repo, read:org, security_events",
  "auth_mode": "pat",
  "rate_limit_warnings": 0,
  "unavailable_capabilities": [],
  "warm_start": false,
  "coverage": {
    "status": "unknown"
  }
}
