crates/gh-report/src/domain/snapshots/gh_report__domain__evidence__tests__snapshot_repository_evidence.snap
---
source: crates/gh-report/src/domain/evidence.rs
expression: evidence
---
{
  "repository": {
    "id": "id-snapshot-repo",
    "node_id": null,
    "name": "snapshot-repo",
    "visibility": "public",
    "language": null,
    "default_branch": "main",
    "archived": false,
    "inventory_key": "id-snapshot-repo",
    "updated_at": null,
    "has_issues": true,
    "pushed_at": null,
    "created_at": null,
    "description": null,
    "fork": false,
    "is_empty": false,
    "html_url": null,
    "topics": [],
    "license_spdx": null
  },
  "checks": {
    "security_policy": {
      "enabled_by_setting": {
        "timestamp": "2026-04-09T12:00:00+00:00"
      }
    },
    "secret_scanning": {
      "enabled": {
        "provenance": {
          "metadata": {
            "http_status": null,
            "alerts": {
              "observable": {
                "source": "per_repo_endpoint",
                "has_open_alerts": false,
                "http_status": null
              }
            }
          }
        },
        "timestamp": "2026-04-09T12:00:00+00:00"
      }
    },
    "dependabot_security_updates": {
      "status": "enabled",
      "reason": null,
      "timestamp": "2026-04-09T12:00:00+00:00"
    },
    "branch_protection": {
      "status": "pass",
      "details": {
        "default_branch": "main",
        "has_pr": true,
        "required_reviewers": 1,
        "has_status_checks": true,
        "admin_equivalent": true,
        "has_broad_bypass": false,
        "reason": null,
        "force_push_blocked": true,
        "deletion_blocked": true
      },
      "timestamp": "2026-04-09T12:00:00+00:00"
    },
    "codeowners": {
      "conforming": {
        "content": "unparsed",
        "timestamp": "2026-04-09T12:00:00+00:00"
      }
    }
  },
  "last_commit": null,
  "repo_details_not_modified": false
}
