crates/gh-report/src/domain/snapshots/gh_report__domain__evidence__tests__snapshot_secret_scanning_observability.snap
---
source: src/domain/evidence.rs
expression: observability
---
{
  "collection_status": "success",
  "collection_reason": null,
  "total_open_secret_alerts": 0,
  "open_secret_alert_age_buckets": {},
  "oldest_open_secret_alert_created_at": null,
  "newest_open_secret_alert_created_at": null,
  "status_mismatch_count": 0,
  "observable_enabled_repositories": 1,
  "unobservable_repositories": 0
}
